@@ -1,4 +1,5 @@
 5.4.0 -> 5.4.1:
+    - proyvind: rubygems.rb: add/provide ruby(abi) dependencies for non-gems.
     - proyvind: rpmfc: add classifiers for gstreamer plugins & dep generator.
     - proyvind: use pythoneggs.py for python deps generated by internal generator.
     - proyvind: rpmfc: enable ruby file classifier & internal dep generator.
